client/assets/scss/app.scss
//@import "settings";
//@import "foundation";
//@import "slick.scss";
//@import "slick-theme.scss";
@import "normalize";
@import "angular-material.scss";

.wallpaper {
  max-width: 700px;
  height: 100%;
}

.home-photo {
  max-width: 100%;
}

//.descriptionMap .angular-google-map-container { height: 540px; width: 500px; }
.angular-google-map-container, .angular-google-map {
  min-height: 32rem;
  height: 100%;
  width: 100%;
}

.dialogdemoBasicUsage #popupContainer {
  position: relative;
}

.dialogdemoBasicUsage .footer {
  width: 100%;
  text-align: center;
  margin-left: 20px;
}

.dialogdemoBasicUsage .footer, .dialogdemoBasicUsage .footer > code {
  font-size: 0.8em;
  margin-top: 50px;
}

md-tab-item > span.ng-scope {
  color: mediumblue;
}

md-ink-bar {
  background-color: red;
}

.marker_labels {
  color: black;
  border: solid;
  background-color: white;
  text-align-all: center;
}

.italic {
  font-style: italic;
}

.material-icons {
  font-size: 24px;
}

.material-icons.color-yellow {
  color: #ffeb3b;
}

.material-icons.color-green {
  color: rgb(0, 157, 26);
}

.home-card {
  min-height: 230px;
}

.centered-image {
  text-align: center;
}

.insert-input {
  max-width: 150px;
}

.material-icons.color-light-yellow {
  color: #fff9c4;
}

.star {
  margin: 0px;
  padding-right: 8px;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
}

.spaced {
  margin-left: 5px;
  margin-right: 5px;
}

